# checkmk-php-fpm-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  package.py  package.sh  pyproject.toml  renovate.json
.github/workflows/: release.yml  test.yml
agents/plugins/: php_fpm_pools
checks/: php_fpm_pools
php-fpm/: Changes  info
php-fpm/agent_based/: php_fpm_pools.py
php-fpm/agents/bakery/: php_fpm_pools
php-fpm/agents/plugins/: php_fpm_pools
php-fpm/checkman/: php_fpm  php_fpm_pools
php-fpm/checks/: php_fpm_pools
php-fpm/graphing/: php_fpm_pools.py
php-fpm/lib/check_mk/base/plugins/agent_based/: php_fpm_pools.py
php-fpm/rulesets/: php_fpm_pools.py
php-fpm/web/plugins/metrics/: php_fpm_pools.py
php-fpm/web/plugins/wato/: agent_bakery_php_fpm_pools.py  php_fpm_pools.py
tests/: conftest.py  test_agent_integration.py  test_agent_plugin.py  test_package.py  test_php_fpm_pools.py
web/plugins/metrics/: php_fpm_pools.py
web/plugins/wato/: php_fpm_pools.py
