[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "checkmk-php-fpm-plugin"
version = "2.0.0"
requires-python = ">=3.14"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, isort

[tool.ruff.lint.per-file-ignores]
"test.py" = ["E501"]
