[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "checkmk-php-fpm-plugin"
version = "2.1.0"
requires-python = ">=3.14"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools]
packages = []

[tool.coverage.run]
omit = ["tests/test_package.py", "tests/test_agent_plugin.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=php_fpm_pools --cov-report=term-missing --cov-report=xml --junitxml=junit.xml -o junit_family=legacy"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, isort

[tool.ruff.lint.per-file-ignores]
"test.py" = ["E501"]
